# greet-rune

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: pypi.yml
python/greet_rune/: __init__.py
python/tests/: test_all.py
src/: lib.rs
